[package]
name = "KeyPair-rs"
version = "0.1.0"
edition = "2021"
authors = ["Toni.Dev <toni.dumancic3@gmail.com", "Used in redstone project"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "0.9.2"
secp256k1 = { version = "0.26.0", features = ["bitcoin_hashes", "rand"] }
hex = "0.4.3"
rand = "0.8.4"