[package]
name = "keypair-rs"
version = "0.1.0"
edition = "2021"
authors = ["Toni.Dev <toni.dumancic3@gmail.com", "Used in redstone project"]
license = "MIT OR Apache-2.0"

[dependencies]
blake2 = "0.9.2"
secp256k1 = { version = "0.26.0", features = ["bitcoin_hashes", "rand"] }
hex = "0.4.3"
rand = "0.8.4"